[gd_scene load_steps=2 format=3 uid="uid://c5i38avxdj7yo"]

[ext_resource type="Script" path="res://Utilities/Entity_Components/hit_box.gd" id="1_0hqgu"]

[node name="HitBox" type="Area2D" groups=["attack"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0hqgu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["attack"]]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
